security-group.tf
############# EKS  Security Group ###################
resource "aws_security_group" "test-sg-eks-cluster" {
  name        = "test-sg-eks-cluster"
  description = "security_group for eks-cluster"
  vpc_id      = aws_vpc.main.id

  tags = {
    Name = "test-sg-eks-cluster"
  }
}

resource "aws_security_group_rule" "test-sg-eks-cluster-ingress" {

  security_group_id = aws_security_group.test-sg-eks-cluster.id
  type              = "ingress"
  description       = "ingress security_group_rule for test-eks-cluster"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "test-sg-eks-cluster-egress" {

  security_group_id = aws_security_group.test-sg-eks-cluster.id
  type              = "egress"
  description       = "egress security_group_rule for test-eks-cluster"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}

############# Bastion  Security Group ###################

resource "aws_security_group" "test-sg-bastion" {

  name   = "test-sg-bastion"
  description = "security_group for bastion-host"
  vpc_id = aws_vpc.main.id

  ingress {
    cidr_blocks = [ "0.0.0.0/0" ]
    description = "ingress security_group_rule for bastion"
    from_port = "22"
    protocol = "tcp"
    self = false
    to_port = "22"
  } 

  egress {
    cidr_blocks = [ "0.0.0.0/0" ]
    description = "egress security_group_rule for bastion"
    from_port = "0"
    protocol = "tcp"
    self = false
    to_port = "65535"
  } 

  tags = {
    "Name" = "test-sg-bastion"
  }
  
}
